# gpt-digests

./: .gitignore  Makefile  README.md  importlinter.config  knowledge.mmd  mkdocs.yml  pyproject.toml  rebuild_views.sh  setup.sh  tagbag__free_finance.mdx  tagbag__free_knowledge_management.mdx  tagbag__free_knowledge_organization.mdx  tmp_automation_tagbags_may-jun.jsonl
digests_project/: __init__.py
digests_project/bags_pipeline/: EDA.ipynb  EDA2.ipynb  __init__.py  config.py  core.py  dedupe.py  eda_bridge.py  hydrate.py  index.py  ingest_logs.py  ingest_sessions.py  io.py  l2.py  l2_registry.yaml  l3.py  l4.py  l5.py  normalize.py  pairs.py  publish.py  quick.py  selectors.yaml  tag_select.py  textnorm.py  unitize.py  validate.py
digests_project/cli/: kbctl.py
digests_project/scripts/: bridge_textflow_to_units.py  clean_empty_events.py  rebuild_views.sh  run_eda_may_aug.sh
digests_project/systemd/: kb-l2.service  kb-l2.timer  kb-l3.service  kb-l3.timer
docs/: _gen_cli_docs.py  cli.md  index.md
docs/api/: hydrate.md  index.md  l2.md  pairs.md  select.md  unitize.md
docs/guide/: hydration.md  pipelines.md  publish.md  quickstart.md  troubleshooting.md
index/: l2_by_window.json
notes/: brief.md  runbook.md
